2010-10-22  Paul Koning  <ni1d@arrl.net>

	* config.pdp11/pdp11.h (DBX_DEBUGGING_INFO): Define.

2010-10-22  DJ Delorie  <dj@redhat.com>

	* config/m32c/m32c-lib1.S (m32c_jsri16): Make reentrant.

2010-10-22  Paul Koning  <ni1d@arrl.net>

	* config/pdp11/pdp11.h (IRA_COVER_CLASSES): Define.

2010-10-22  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (ix86_builtin_vectorized_function): Add
	cases for __builtin_fma and __builtin_fmaf.

2010-10-22  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (ix86_expand_fp_absneg_operator): Produce
	NEG+USE for vectors as well.
	* config/i386/i386.md (*absneg<VEC_FLOAT_MODE>2): New pattern
	and splitter.

2010-10-22  Joseph Myers  <joseph@codesourcery.com>

	* gcc.c (DEFAULT_SWITCH_CURTAILS_COMPILATION,
	SWITCH_CURTAILS_COMPILATION): Remove.
	* doc/tm.texi.in (SWITCH_CURTAILS_COMPILATION): Remove
	documentation.
	* doc/tm.texi: Regenerate.
	* system.h (SWITCH_CURTAILS_COMPILATION): Poison.

2010-10-22  Changpeng Fang  <changpeng.fang@amd.com>

	* gcc/config/i386/bdver1.md: New file.
	* gcc/config/i386/i386.md (include "bdver1.md"): Invoke the
	pipeline description for bdver1.
	(x86_sahf_1): Add "bdver1_decode" attribute.
	(*cmpfp_i_mixed): Likewise.
	(*cmpfp_i_sse): Likewise.
	(*cmpfp_i_i387): Likewise.
	(*cmpfp_iu_mixed): Likewise.
	(*cmpfp_iu_sse): Likewise.
	(*cmpfp_iu_387): Likewise.
	(*swap<mode>,*swap<mode>_1): Likewise.
	(fixuns_trunc<mode>hi2): Likewise.
	(fix_trunc<mode>si_sse): Likewise.
	(x86_fnstcw_1): Likewise.
	(x86_fldcw_1): Likewise.
	(*floatsi<mode>2_vector_mixed_with_temp): Likewise.
	(*floatsi<mode>2_vector_mixed): Likewise.
	(*float<SSEMODEI24:mode><MODEF:mode>2_mixed_with_temp): Likewise.
	(*float<SSEMODEI24:mode><MODEF:mode>2_mixed_interunit): Likewise.
	(*float<SSEMODEI24:mode><MODEF:mode>2_mixed_nointerunit): Likewise.
	(*floatsi<mode>2_vector_sse_with_temp): Likewise.
	(*floatsi<mode>2_vector_sse): Likewise.
	(*float<SSEMODEI24:mode><MODEF:mode>2_sse_with_temp): Likewise.