@@ -1,3 +1,9 @@
+2010-10-22  Artjoms Sinkarovs <artyom.shinakroff@gmail.com>
+	Andrew Pinski <pinskia@gmail.com>
+
+	* c-common.h (c_common_mark_addressable_vec): Declare.
+	* c-common.c (c_common_mark_addressable_vec): New function.
+
 2010-10-20  Nicola Pero  <nicola.pero@meta-innovation.com>
 
 	* c-common.h (objc_set_method_type): Removed.
