@@ -1,3 +1,9 @@
+2010-10-22  Artjoms Sinkarovs <artyom.shinakroff@gmail.com>
+	Andrew Pinski <pinskia@gmail.com>
+
+	* c-typeck.c (build_array_ref): Handle subscripting of vectors.
+	* doc/extend.texi: New paragraph
+
 2010-10-22  Paul Koning  <ni1d@arrl.net>
 
 	* config.pdp11/pdp11.h (DBX_DEBUGGING_INFO): Define.
